--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "watch": "webpack --env.development --watch"
   },
   "devDependencies": {
+    "@types/jquery": "^3.3.38",
+    "@types/jszip": "^3.1.7",
     "@types/node": "^13.13.5",
+    "jquery": "^3.5.1",
+    "jszip": "^3.4.0",
     "ts-loader": "^7.0.4",
     "tslint": "^6.1.2",
     "typescript": "^3.9.2",
