вебпак и вывод данных

--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "@types/jquery": "^3.3.38",
     "@types/jszip": "^3.1.7",
     "@types/node": "^13.13.5",
+    "autoprefixer": "^9.7.6",
+    "bootstrap": "^4.5.0",
+    "bootswatch": "^4.4.1",
+    "css-loader": "^3.5.3",
     "jquery": "^3.5.1",
     "jszip": "^3.4.0",
+    "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
+    "postcss-loader": "^3.0.0",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "ts-loader": "^7.0.4",
     "tslint": "^6.1.2",
     "typescript": "^3.9.2",
